lox-tests/tests/field/set_on_string.stderr
ERROR: Only class instances have fields, not objects of type string
 --> 1:1
  |
1 | "str".foo = "value"; // expect runtime error: Only instances have fields.
  | ^-------^
